fixed cart size on mobile

--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -1,7 +1,9 @@
 .ui.right.very.wide.visible.sidebar{
-    
     background-color:gainsboro;
-    
+}
+
+.ui.right.wide.visible.sidebar{
+    background-color:gainsboro;
 }
 
 
